// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`変数 式 if 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"ProgramRule\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"ToRight\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"Pipe\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"PipeFrom\\",
                                \\"children\\": {
                                  \\"LogicExpression\\": [
                                    {
                                      \\"name\\": \\"LogicExpression\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 5,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 3,
                                                        \\"endOffset\\": 3,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 3,
                                                        \\"endColumn\\": 3,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 18,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                19,
                                                                20
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"19\\": true,
                                                                \\"20\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 7,
                          \\"endOffset\\": 8,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 39,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 39,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 14,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 14,
                          \\"tokenTypeIdx\\": 9,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 9,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"IfStatement\\",
              \\"children\\": {
                \\"IfToken\\": [
                  {
                    \\"image\\": \\"if\\",
                    \\"startOffset\\": 16,
                    \\"endOffset\\": 17,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 2,
                    \\"tokenTypeIdx\\": 34,
                    \\"tokenType\\": {
                      \\"name\\": \\"IfToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 34,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"LBrackets\\": [
                  {
                    \\"image\\": \\"(\\",
                    \\"startOffset\\": 19,
                    \\"endOffset\\": 19,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 4,
                    \\"endColumn\\": 4,
                    \\"tokenTypeIdx\\": 10,
                    \\"tokenType\\": {
                      \\"name\\": \\"LBrackets\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 10,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"(\\"
                    }
                  }
                ],
                \\"conditionalExpression\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"LogicExpression\\": [
                              {
                                \\"name\\": \\"LogicExpression\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"value\\",
                                                              \\"startOffset\\": 20,
                                                              \\"endOffset\\": 24,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 5,
                                                              \\"endColumn\\": 9,
                                                              \\"tokenTypeIdx\\": 9,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 9,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"RBrackets\\": [
                  {
                    \\"image\\": \\")\\",
                    \\"startOffset\\": 25,
                    \\"endOffset\\": 25,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 10,
                    \\"endColumn\\": 10,
                    \\"tokenTypeIdx\\": 11,
                    \\"tokenType\\": {
                      \\"name\\": \\"RBrackets\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 11,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\")\\"
                    }
                  }
                ],
                \\"LCurly\\": [
                  {
                    \\"image\\": \\"{\\",
                    \\"startOffset\\": 27,
                    \\"endOffset\\": 27,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 12,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 12,
                    \\"tokenType\\": {
                      \\"name\\": \\"LCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 12,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"{\\"
                    }
                  },
                  {
                    \\"image\\": \\"{\\",
                    \\"startOffset\\": 36,
                    \\"endOffset\\": 36,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 8,
                    \\"endColumn\\": 8,
                    \\"tokenTypeIdx\\": 12,
                    \\"tokenType\\": {
                      \\"name\\": \\"LCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 12,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"{\\"
                    }
                  }
                ],
                \\"BlockStatement\\": [
                  {
                    \\"name\\": \\"BlockStatement\\",
                    \\"children\\": {}
                  },
                  {
                    \\"name\\": \\"BlockStatement\\",
                    \\"children\\": {}
                  }
                ],
                \\"RCurly\\": [
                  {
                    \\"image\\": \\"}\\",
                    \\"startOffset\\": 29,
                    \\"endOffset\\": 29,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 13,
                    \\"tokenType\\": {
                      \\"name\\": \\"RCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 13,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"}\\"
                    }
                  },
                  {
                    \\"image\\": \\"}\\",
                    \\"startOffset\\": 38,
                    \\"endOffset\\": 38,
                    \\"startLine\\": 5,
                    \\"endLine\\": 5,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 13,
                    \\"tokenType\\": {
                      \\"name\\": \\"RCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 13,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"}\\"
                    }
                  }
                ],
                \\"ElseToken\\": [
                  {
                    \\"image\\": \\"else\\",
                    \\"startOffset\\": 31,
                    \\"endOffset\\": 34,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 3,
                    \\"endColumn\\": 6,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ElseToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 数値 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"ProgramRule\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"ToRight\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"Pipe\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"PipeFrom\\",
                                \\"children\\": {
                                  \\"LogicExpression\\": [
                                    {
                                      \\"name\\": \\"LogicExpression\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 5,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 3,
                                                        \\"endOffset\\": 3,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 3,
                                                        \\"endColumn\\": 3,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 18,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                19,
                                                                20
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"19\\": true,
                                                                \\"20\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 7,
                          \\"endOffset\\": 8,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 39,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 39,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 14,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 14,
                          \\"tokenTypeIdx\\": 9,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 9,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"ToRight\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"Pipe\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"PipeFrom\\",
                                \\"children\\": {
                                  \\"LogicExpression\\": [
                                    {
                                      \\"name\\": \\"LogicExpression\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"value\\",
                                                                    \\"startOffset\\": 16,
                                                                    \\"endOffset\\": 20,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 9,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 9,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 24,
                                                                    \\"endOffset\\": 24,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 9,
                                                                    \\"endColumn\\": 9,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 22,
                                                        \\"endOffset\\": 22,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 7,
                                                        \\"endColumn\\": 7,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 18,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                19,
                                                                20
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"19\\": true,
                                                                \\"20\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 26,
                          \\"endOffset\\": 27,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 39,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 39,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 29,
                          \\"endOffset\\": 33,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 14,
                          \\"endColumn\\": 18,
                          \\"tokenTypeIdx\\": 9,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 9,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 文字列 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"ProgramRule\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"ToRight\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"Pipe\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"PipeFrom\\",
                                \\"children\\": {
                                  \\"LogicExpression\\": [
                                    {
                                      \\"name\\": \\"LogicExpression\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 6,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 6,
                                                                    \\"tokenTypeIdx\\": 3,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 3,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 8,
                          \\"endOffset\\": 9,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 8,
                          \\"endColumn\\": 9,
                          \\"tokenTypeIdx\\": 39,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 39,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 11,
                          \\"endOffset\\": 15,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 15,
                          \\"tokenTypeIdx\\": 9,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 9,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rule\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"ToRight\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"Pipe\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"PipeFrom\\",
                                \\"children\\": {
                                  \\"LogicExpression\\": [
                                    {
                                      \\"name\\": \\"LogicExpression\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"value\\",
                                                                    \\"startOffset\\": 17,
                                                                    \\"endOffset\\": 21,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 9,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 9,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                                    \\"startOffset\\": 25,
                                                                    \\"endOffset\\": 30,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 9,
                                                                    \\"endColumn\\": 14,
                                                                    \\"tokenTypeIdx\\": 3,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 3,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 23,
                                                        \\"endOffset\\": 23,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 7,
                                                        \\"endColumn\\": 7,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 18,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                19,
                                                                20
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"19\\": true,
                                                                \\"20\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 32,
                          \\"endOffset\\": 33,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 16,
                          \\"endColumn\\": 17,
                          \\"tokenTypeIdx\\": 39,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 39,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 35,
                          \\"endOffset\\": 39,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 19,
                          \\"endColumn\\": 23,
                          \\"tokenTypeIdx\\": 9,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 9,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
